Fixed the breadcumbs layout issue on article/media pages.

--- a/_sass/_breadcrumbs.scss
+++ b/_sass/_breadcrumbs.scss
@@ -3,7 +3,6 @@
    ========================================================================== */
 
 .breadcrumbs {
-  padding-top: 20px;
   padding-bottom: 30px;
   @include row;
   margin-top: $gutter;
