--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -108,6 +108,14 @@
    }
 
    /* Header & Footer Lines */
+   .div-35-high {
+     height: 35px;
+     width: 100%;
+   }
+   .div-30-high {
+     height: 30px;
+     width: 100%;
+   }
    .div-25-high {
      height: 25px;
      width: 100%;
